...
            contentPadding = PaddingValues(horizontal = 16.dp, vertical = 8.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            content = {
                items(categories.size) { index ->
                    val categoryItem = categories[index]
                    Category(
                        modifier = Modifier.testTag("list_item").fillMaxWidth(),
                        categoryItem = categoryItem,
                        onViewTransactions = onViewTransactions
                    )
                }
            }
        )
...
